--- a/myReactProject1/src/App.css
+++ b/myReactProject1/src/App.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    background-color: #3b36cc;
-    color: white;
+    background-color: #bbb;
+    color: #000;
     display: flex;
     justify-content: center;
     font-family: sans-serif;
@@ -15,7 +15,7 @@ body{
 .wrapper{
     width: 450px;
     padding: 30px;
-    background-color: #1a1a40;
+    background-color: #ffa;
     border-radius: 5px;
     margin-top: 20px;
     text-align: center;
@@ -25,29 +25,29 @@ body{
     height: 40px;
     width: 100%;
     margin: 25px 0;
-    border: 1px solid #3b36cc;
+    border: 1px solid #999;
     display: flex;
 }
 .create-form>input{
     outline: none;
     border: none;
     background: none;
-    color: white;
+    color: #000;
     width: 100%;
     height: 100%;
     padding-left: 10px;
 }
 .create-form>button{
     border: none;
-    background-color: #3636cc;
-    color: white;
+    background-color: #aaa;
+    color: #000;
     width: 50px;
     height: 100%;
     cursor: pointer;
 }
 
 .todo{
-    background-color: #3636cc;
+    background-color: #ccc;
     height: 40px;
     padding: 0 10px;
     margin-top: 10px;
@@ -57,6 +57,12 @@ body{
     align-items: center;
 }
 .completed{
-    opacity: .4;
-    text-decoration: line-through 3px black;
+    opacity: .5;
+    text-decoration: line-through 3px #000;
+}
+
+@media screen and (max-width: 767px) {
+    .wrapper{
+        width: 100%;
+    }
 }
