--- a/myReactProject1/src/App.css
+++ b/myReactProject1/src/App.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body{
-    background-color: #bbb;
+    background-color: #ddd;
     color: #000;
     display: flex;
     justify-content: center;
@@ -25,7 +26,7 @@ body{
     height: 40px;
     width: 100%;
     margin: 25px 0;
-    border: 1px solid #999;
+    border: 1px solid #ccc;
     display: flex;
 }
 .create-form>input{
@@ -39,7 +40,7 @@ body{
 }
 .create-form>button{
     border: none;
-    background-color: #aaa;
+    background-color: #ccc;
     color: #000;
     width: 50px;
     height: 100%;
@@ -47,7 +48,7 @@ body{
 }
 
 .todo{
-    background-color: #ccc;
+    background-color: #ddd;
     height: 40px;
     padding: 0 10px;
     margin-top: 10px;
